<resources>
    <string name="app_name">SoManager Lite</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="description_du_poster">Description du poster</string>
    <string name="poster">Poster 1</string>
    <string name="detail">Detail</string>
    <string name="nom">Nameless</string>
    <string name="prenom">Noidea</string>
    <string name="value">20</string>
    <string name="text_myjuries">My Juries</string>
    <string name="text_posters">Posters</string>
    <string name="text_marks">Marks</string>
    <string name="text_subjects">Subjects</string>
    <string name="projet_android">Projet android</string>
    <string name="date">25/01/19 à 15h00</string>
    <string name="projet_info">Informations of my project</string>
    <string name="logo_eseo">ESEO</string>


</resources>
