<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_visitor_project_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:minLines="1"
            android:padding="2dp"
            android:text="@string/projet_android"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_visitor_project_resume"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:paddingTop="2dp"
            android:paddingRight="8dp"
            android:paddingBottom="2dp"
            android:text="@string/projet_info"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/visitor_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Comment"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end">

            <EditText
                android:id="@+id/mark_visitor"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:padding="1dp"
                android:text="@string/value"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="32sp" />

            <Button
                android:id="@+id/visitor_button_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail" />
        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>