<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:focusable="false"
    android:focusableInTouchMode="true">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="327dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mark_forname"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:minLines="2"
                android:padding="2dp"
                android:text="@string/nom"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mark_surname"
                android:layout_width="228dp"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:text="@string/prenom"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/mark_value"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:padding="2dp"
            android:text="@string/value"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/mark_avg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="3"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:padding="2dp"
            android:text="@string/value"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="32sp" />


    </LinearLayout>
</android.support.v7.widget.CardView>